fixed letter spacing

--- a/css/style.css
+++ b/css/style.css
@@ -46,14 +46,14 @@ body {
   font-family: "Mindline Script Demo";
   src: url("fonts/Mindline Script Demo.ttf") format("truetype"); }
 
-@media only screen and (min-device-width: 375px) and (max-device-width: 768px) {
+@media (min-device-width: 375px) and (max-device-width: 768px) {
   /* Styles */
   html {
     font-size: 25%; }
   body {
     padding: 3vh 5vw; } }
 
-@media only screen and (min-device-width: 320px) and (max-device-width: 375px) {
+@media (min-device-width: 320px) and (max-device-width: 375px) {
   /* Styles */
   html {
     font-size: 20%; }
@@ -172,8 +172,10 @@ body {
     color: #000;
     font-size: 1.5rem;
     font-weight: 100;
-    letter-spacing: 1rem;
+    letter-spacing: .5rem;
     animation: moveInRight 1s ease-out; }
+    .heading-primary--sub sup {
+      letter-spacing: 0; }
 
 .about-me-paragraph {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -282,21 +284,19 @@ footer {
   color: #E1B22B;
   background-color: #fff; }
 
-.registry-column {
-  height: 33vh; }
-  .registry-column--1 {
-    overflow: hidden;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-blend-mode: overlay; }
-    .registry-column--1:hover {
-      background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(../img/me.jpg);
-      opacity: 1; }
-    .registry-column--1:not(hover) {
-      background-image: linear-gradient(to right bottom, #fff, #000), url(../img/me.jpg);
-      box-shadow: inset 0 0 100px #000000;
-      opacity: 0.8; }
+.registry-column--1 {
+  overflow: hidden;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-blend-mode: overlay; }
+  .registry-column--1:hover {
+    background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(../img/me.jpg);
+    opacity: 1; }
+  .registry-column--1:not(hover) {
+    background-image: linear-gradient(to right bottom, #fff, #000), url(../img/me.jpg);
+    box-shadow: inset 0 0 100px #000000;
+    opacity: 0.8; }
 
 .btn:link, .btn:visited {
   display: inline-block;
