--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -32,7 +32,7 @@ body {
 
 }
 
-@media only screen and (min-device-width : 375px) and (max-device-width : 768px) {
+@media(min-device-width : 375px) and (max-device-width : 768px) {
 
 	/* Styles */
 	html {
@@ -47,7 +47,7 @@ body {
 	
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 375px) {
+@media(min-device-width : 320px) and (max-device-width : 375px) {
 
 	/* Styles */
 	html {
