--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -103,10 +103,8 @@ footer {
 
 
 .registry-column {
-	height: $grid-row-height-small;
 
 	&--1 {
-		background-image: url(../img/registry-logos/Crate\ and\ Barrel\ Logo.png);
 		overflow: hidden;
 		background-size: cover;
 		background-position: center center;
